# chromatica

./: .gitignore  BORDER_HANDLING_IMPLEMENTATION.md  BRICK_MEMBERSHIP_ALGORITHM.md  BUILD_CYTHON.md  CELL_REFACTORING_COMPLETE.md  CHANGELOG.MD  CODE_QUALITY_RECOMMENDATIONS.md  CYTHON_REFACTORING.md  GRADIENT_GRID_FEATURE_PLAN.md  GRADIENT_GRID_TESTS.md  IMPLEMENTATION_SUMMARY.md  LIBRARY_REVIEW_V2.md  OPTIMIZATION_HOTSPOTS.md  PIXEL_KERNEL_BRICK_ANALYSIS.md  PRUNING_REFERENCE.txt  PR_SUMMARY.md  README.md  REDUNDANT_FUNCTIONS.md  REFACTORING_SUMMARY.md  UNUSED_METHODS_ANALYSIS.md  __init__.py  build_all.py  build_new_kernels.py  conftest.py  publish.ps1  publish.py  pyproject.toml  requirements.txt  setup_all_fix.py  setup_cython.py  setup_new_kernels.py  setup_new_kernels_fix.py  setup_old_kernels.py  setup_old_kernels_fix.py  test_border_standalone.py  test_transforms.py  unified_publish.py
benchmark_tests/: README.md  __init__.py  test_segment_vs_mask.py
chromatica/: __init__.py  color_arr.py  functions.py  gradient.py  np_functions.py  radial_angular_gradient.py  utils.py
chromatica/colors/: __init__.py  arithmetic.py  color.py  color_base.py  hsl.py  hsv.py  rgb.py  types.py
chromatica/conversions/: __init__.py  css_to_hsl.py  css_to_hsv.py  format_type.py  numbers.py  to_hsl.py  to_hsv.py  to_rgb.py  utils.py  wrapper.py
chromatica/gradients/: __init__.py  angular_radial_helpers.py  color_utils.py  examples.py  full_parametrical_angular_radial.py  full_parametrical_angular_radial_examples.py  gradient.py  gradient1d.py  gradient2d.py  partitions.py  radial.py  simple_angular_radial.py  v2_core.py  (+3 more)
examples/: animations.py  array_operations.py  basic_usage.py  parametrical_radials.py
tests/: conftest.py  samples.py  test_gradient.py  test_radial_angular_gradient.py  test_utils.py  utils.py
(+268 files in other folders)
