[build-system]
requires = [
    "setuptools>=69",
    "wheel",
    "Cython>=0.29.0",
    "numpy>=1.21.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "chromatica"
version = "1.0.3"
description = "Advanced color manipulation library for gradients and conversions"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Grayjou", email = "cgrayjou@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics"
]
dependencies = [
    "numpy>=1.21.0",
    "pillow>=9.0.0",
    "scikit-image>=0.19.0",
    "boundednumbers>=0.1.0",
    "unitfield>=0.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "twine>=4.0",
    "coverage>=6.0",
    "Cython>=0.29.0"
]
build = [
    "Cython>=0.29.0",
    "numpy>=1.21.0",
    "setuptools>=69"
]

[project.urls]
Homepage = "https://github.com/Grayjou/chromatica"
Repository = "https://github.com/Grayjou/chromatica"
Issues = "https://github.com/Grayjou/chromatica/issues"

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["chromatica*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
